Adding screen color preference action.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="radio_laranja">Laranja</string>
     <string name="radio_verde">Verde</string>
     <string name="btn_salvar">Salvar</string>
+    <string name="erro">Escolha uma cor</string>
 </resources>
